--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react": "^17.0.1",
         "react-apexcharts": "^1.3.7",
         "react-dom": "^17.0.1",
+        "react-hook-form": "^7.3.4",
         "react-image-lightbox": "^5.1.1",
         "react-images": "^1.1.0-beta.3",
         "react-lazyload": "^2.6.5",
