--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "axios": "^0.21.0",
         "es6-promise": "^4.2.8",
         "history": "^4.10.1",
+        "immer": "^9.0.2",
         "moment": "^2.24.0",
         "next": "^10.0.3",
         "next-compose-plugins": "^2.2.1",
@@ -38,6 +39,7 @@
         "redux-devtools-extension": "^2.13.8",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "shortid": "^2.2.16"
     }
 }
