--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "name": "nouthemes"
     },
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev -p 3001",
         "build": "next build",
         "start": "next start -p 3002"
     },
