--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@zeit/next-sass": "^1.0.1",
         "antd": "^4.15.4",
+        "antd-img-crop": "^3.14.2",
         "apexcharts": "^3.22.2",
         "axios": "^0.21.0",
         "es6-promise": "^4.2.8",
